add proj config files

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 # A .gitignore for Keil projects.
 # Taken mostly from http://www.keil.com/support/man/docs/uv4/uv4_b_filetypes.htm
 
+*.scvd
+
 # User-specific uVision files
 *.bak
 *.opt
 *.uvopt
-*.uvoptx
 *.uvgui
 *.uvgui.*
 *.uvguix.*
