--- a/MrRTOS.uvprojx
+++ b/MrRTOS.uvprojx
@@ -405,6 +405,11 @@
               <FileType>1</FileType>
               <FilePath>.\uart.c</FilePath>
             </File>
+            <File>
+              <FileName>context.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\context.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
