Fix some compilation issues

--- a/MrRTOS.uvprojx
+++ b/MrRTOS.uvprojx
@@ -420,6 +420,11 @@
               <FileType>1</FileType>
               <FilePath>.\GLCD_SPI_LPC1700.c</FilePath>
             </File>
+            <File>
+              <FileName>RTOS.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\RTOS.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
